# server-rs

./: Cargo.toml  Makefile  README.md  model.rs  rustfmt.toml
src/: error.rs  main.rs
src/store/: model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
