[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
tower-cookies = "0.9"

[dev-dependencies]
httpc-test = "0.1.1"
anyhow = "1"
